@@ -6,3 +6,13 @@
 -- 3 gerar token para login
 
 -- testar picture em auth/register
+
+
+pendencias:
+* validar swagger campos requireds
+* após o cadastro enviar email de confirmacao
+    * no retorno de created 201 melhorar descrição dizendo que foi enviado email
+    * pensar na possibilidade de quando resetar email tambem deixar emailCOnfirmed = 1
+
+* cadastrar usuario com external login
+    * considerar picture que recebemos
